menu more in line

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -20,19 +20,19 @@
                 <div class="navChild w-100">
                     <div class="padLeft30">
                         <img src="../img/summary.svg" alt="summary">
-                        <div>Summary</div>
+                        <div class="d-flex align-items-center">Summary</div>
                     </div>
                     <div class="padLeft30">
                         <img src="../img/board.svg" alt="board">
-                        <div>Board</div>
+                        <div class="d-flex align-items-center">Board</div>
                     </div>
                     <div class="padLeft30">
-                        <img src="../img/addTask.svg" alt="add task">
-                        <div>Add Task</div>
+                        <img class="w-38" src="../img/addTask.svg" alt="add task">
+                        <div class="d-flex align-items-center">Add Task</div>
                     </div>
                     <div class="padLeft30">
-                        <img class="contactsImgSize" src="../img/contacts.svg" alt="contacts">
-                        <div>Contacts</div>
+                        <img class="w-38" src="../img/contacts.svg" alt="contacts">
+                        <div class="d-flex align-items-center">Contacts</div>
                     </div>
                 </div>
             </div>
