--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -12,10 +12,9 @@
 }
 
 .custom-btn-container {
-    margin-top: 904px;
-    margin-bottom: 67px;
-    margin-right: 48px;
-    margin-left: 1000px;
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: 64px;
 }
 
 ::-webkit-scrollbar {
