--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -65,28 +65,39 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgba(152,255,152, 0.8) !important;
+    background-color: rgba(152, 255, 152, 0.8) !important;
 }
 
 .custom-overlay-card {
+    width: 100%;
     height: 594px;
-    min-width: 600px;
     display: flex;
+    align-items: center;
     justify-content: center;
-    gap: 0;
-    flex-shrink: 0;
 }
 
 .contacts-overlay-left {
     background-color: var(--version-2-main-color, #2A3647);
-
+    width: 30%;
+    display: inline-flex;
+    padding: 66px 46px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 12px;
+    flex-shrink: 0;
 }
 
 .overlay-left {
     background-color: var(--version-2-main-color, #2A3647);
-
 }
 
 .contacts-overlay-right {
     background: #ffffff;
+    width: 50%;
+    background-color: white;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-direction: column;
 }
