position:absolute on sidebar

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -18,19 +18,19 @@
                 </div>
 
                 <div class="navChild w-100">
-                    <div class="padLeft30">
+                    <div class="ps-5">
                         <img src="../img/summary.svg" alt="summary">
                         <div class="d-flex align-items-center">Summary</div>
                     </div>
-                    <div class="padLeft30">
+                    <div class="ps-5">
                         <img src="../img/board.svg" alt="board">
                         <div class="d-flex align-items-center">Board</div>
                     </div>
-                    <div class="padLeft30">
+                    <div class="ps-5">
                         <img class="w-38" src="../img/addTask.svg" alt="add task">
                         <div class="d-flex align-items-center">Add Task</div>
                     </div>
-                    <div class="padLeft30">
+                    <div class="ps-5">
                         <img class="w-38" src="../img/contacts.svg" alt="contacts">
                         <div class="d-flex align-items-center">Contacts</div>
                     </div>
