--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,5 @@
 nav {
+    position:absolute;
     background-color: rgba(42,54,71,255);
     width: 232px;
     height: 100vh;
@@ -22,7 +23,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-left: calc(355px - 232px);
+    padding-left: 355px;
     padding-right: 36px;
     font-size: 20px;
 }
@@ -41,7 +42,6 @@ header {
     padding-bottom: 8px;
     margin-top: 8px;
     margin-bottom: 8px;
-    /* width: 100%; */
 }
 
 .navChild>div:hover {
@@ -64,8 +64,4 @@ header {
 
 .w-38 {
     width: 38px;
-}
-
-.padLeft30 {
-    padding-left: 30px;
 }
