--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -131,7 +131,9 @@
     outline: none;
 }
 
-
+.click-to-close:hover {
+    cursor: pointer;
+}
 .contact-input {
     position: relative;
     display: flex;
