--- a/styles/index.css
+++ b/styles/index.css
@@ -2,6 +2,15 @@ body {
   background-color: #f6f7f8;
 }
 
+.logo-img {
+  position: absolute;
+  top: calc(100vh - 50% - 150px);
+  left: calc(100vw - 50% - 150px);
+  width: 200px;
+  height: 200px;
+  z-index: 10;
+  animation: logoSlideIn 2s forwards 1s;
+}
 .signup-btn {
   display: flex;
   align-items: center;
@@ -13,7 +22,10 @@ body {
   border: none;
   color: white;
 }
-
+.nav {
+  display: flex;
+  justify-content: flex-end;
+}
 .nav-join-user {
   gap: 35px;
   font-size: 1.25rem;
@@ -23,6 +35,9 @@ body {
 
 .login-box {
   background-color: white;
+  opacity: 0;
+  z-index: 5;
+  animation: appearLoginField 1s forwards 1s;
   text-align: center;
   align-items: center;
   padding: 32px 0;
@@ -99,6 +114,29 @@ form {
 }
 .checkbox-container {
   margin: 10px 10px;
+}
+
+@keyframes logoSlideIn {
+  0% {
+    top: calc(100vh - 50% - 150px);
+    left: calc(100vw - 50% - 150px);
+  }
+
+  100% {
+    top: 0px;
+    left: 10px;
+    transform: scale(0.5);
+  }
+}
+
+@keyframes appearLoginField {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
 }
 
 @media only screen and (max-width: 640px) {
