--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,12 +9,12 @@
     <link rel="stylesheet" href="../styles/fonts.css" />
     <link rel="stylesheet" href="../styles/style.css" />
 </head>
-<body>
+<body> -->
     <div class="sidebar">
         <nav>
             <div class="w-100 d-flex flex-column align-items-center">
                 <div class="logoDiv">
-                    <img src="../img/logo.svg" alt="JOIN">
+                    <img src="../img/logoWhite.svg" alt="JOIN">
                 </div>
 
                 <div class="navChild w-100">
@@ -55,5 +55,5 @@
             </div>
         </header>
     </div>
-</body>
-</html>
+<!-- </body>
+</html> -->
