--- a/styles/styleSidebar.css
+++ b/styles/styleSidebar.css
@@ -17,6 +17,7 @@ nav {
 }
 
 header {
+    background-color: white;
     width: 100%;
     height: 89px;
     box-shadow: -2px 0px 6px 0px rgb(0, 0, 0, 0.2);
