--- a/styles/summary.css
+++ b/styles/summary.css
@@ -4,5 +4,77 @@
     margin-left: 232px;
     height: calc(100vh - 91px);
     width: calc(100% - 232px);
+    padding-top: 50px;
+    padding-left: 60px;
+    padding-bottom: 50px;
+    background-color: rgba(246,247,248,255);
     /* background-color: rgba(0, 0, 0, 0.5); */
 } 
+
+.size3Em {
+    font-size: 3em;
+}
+
+.size2Em {
+    font-size: 2em;
+}
+
+.size08Em {
+    font-size: 0.8em;
+}
+
+.bold {
+    font-weight: bold;
+}
+
+.borderColorBlue {
+    border-color: #29ABE2;
+}
+
+.fontColorBlue {
+    color: #29ABE2;;
+}
+
+.firstContainer {
+    /* background-color: rgb(162, 162, 255); */
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    margin: 60px;
+}
+
+.firstContainer img {
+    height: 60px;
+}
+
+.secondContainer {
+    /* background-color: green; */
+    width: 40%;
+    display: flex;
+    align-items: center;
+}
+
+.childDiv {
+    height: calc(100% - 72px);
+}
+
+.noWrapWords {
+    white-space: nowrap;
+}
+
+.divSummaryUrgentWidth {
+    width: calc(50% - 50px);
+}
+
+.bgWhite {
+    background-color: white;
+    transition: all .2s ease-in-out;
+}
+
+.bgWhite:hover {
+    cursor: pointer;
+    background-color: rgba(42,54,71,255);
+    color: white;
+    transform: scale(1.1);
+}
