--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -108,6 +108,7 @@ body {
 
 .circle {
     background-color: rosybrown;
+    color: #ffffff;
     border-radius: 50%;
     width: 48px;
     height: 48px;
