--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -77,21 +77,21 @@ body {
 }
 
 .container-letter {
-    display: flex;
+    /* display: flex; */
     justify-content: center;
     flex-direction: column;
     align-items: center;
 }
 
+
 .initial {
-    display: flex;
-    align-items: center;
-    height: 60px;
-    margin-left: 37.5px;
+    /* display: flex; */
+    /* align-items: center; */
+    /* height: 60px; */
     font-weight: 400;
     font-size: 21px;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    /* margin-top: 10px; */
+    /* margin-bottom: 10px; */
 }
 
 .single-contact-card {
@@ -102,6 +102,7 @@ body {
     border-radius: 10px;
     padding: 15px 25px 15px 25px;
     margin: 8px;
+    width: fit-content;
 }
 
 .single-contact-card:hover {
