--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -2,6 +2,32 @@ body {
     overflow: hidden;
 }
 
+dialog {
+    position: relative;
+    height: 80%;
+    margin: 0;
+    padding: 20px 30% 0 5px;
+    border: none;
+    background-color: #f6f7f8;
+}
+
+#dialogContact a[phone]{
+    text-decoration: none;
+    color: black;
+}
+
+.icon-dialog:hover .my-path, .icon-dialog:hover{
+    cursor: pointer;
+    color: #007CEE;
+    fill: #007CEE;
+}
+
+/* .icon-dialog svg:hover {
+    fill: #007CEE;
+} */
+
+
+
 .custom-btn {
     display: flex;
     height: 55px;
