--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -6,6 +6,7 @@ body {
   position: relative;
   height: 80%;
   margin: 0;
+  z-index: 10;
   padding: 20px 30% 0 5px;
   border: none;
   background-color: #f6f7f8;
@@ -26,12 +27,15 @@ body {
 #dialog__editContact {
   background-color: #2a3647;
   padding: 0;
+  top: 25%;
+  z-index: 15;
   display: flex;
   justify-content: space-between;
   overflow: hidden;
   border-radius: 30px;
   width: 70%;
   height: 50%;
+  transform: translateX(300%);
 }
 
 .dialog__editLeftSide {
@@ -140,6 +144,10 @@ body {
   top: 1em;
   cursor: pointer;
   right: 1em;
+}
+
+.show-edit-dialog {
+  animation: showEditDialog 1s ease-in-out forwards;
 }
 
 /* .icon-dialog svg:hover {
@@ -409,4 +417,15 @@ body {
 /* GENERAL STYLINGS */
 .custom-lh-120 {
   line-height: 120%;
+}
+
+/* ANIMATIONS */
+@keyframes showEditDialog {
+  from {
+    transform: translateX(300%);
+  }
+
+  to {
+    transform: translateX(0);
+  }
 }
