--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -24,7 +24,8 @@ body {
   fill: #007cee;
 }
 
-#dialog__editContact {
+#dialog__editContact,
+#dialog__createContact {
   background-color: #2a3647;
   padding: 0;
   top: 25%;
@@ -38,7 +39,8 @@ body {
   transform: translateX(300%);
 }
 
-.dialog__editLeftSide {
+.dialog__editLeftSide,
+.dialog__createLeftSide {
   color: white;
   display: flex;
   flex-direction: column;
@@ -54,18 +56,21 @@ body {
   margin-top: -1em;
 }
 
-.dialog__editLeftSide h2 {
+.dialog__editLeftSide h2,
+.dialog__createLeftSide h2 {
   font-size: 3rem;
   margin: 0;
   font-weight: 700;
 }
 
-.dialog__editLeftSide img {
+.dialog__editLeftSide img,
+.dialog__createLeftSide img {
   object-fit: cover;
   width: 50px;
 }
 
-.dialog__editRightSide {
+.dialog__editRightSide,
+.dialog__createRightSide {
   background-color: white;
   position: relative;
   width: 60%;
@@ -74,14 +79,16 @@ body {
   align-items: center;
 }
 
-.dialog__editRightForm {
+.dialog__editRightForm,
+.dialog__createRightForm {
   display: flex;
   width: 60%;
   flex-direction: column;
   gap: 2em;
 }
 
-.dialog__editInput {
+.dialog__editInput,
+.dialog__createInput {
   border-radius: 10px;
   border: 1px solid lightgray;
   width: 100%;
@@ -91,25 +98,31 @@ body {
   background-position-x: 90%;
   background-position-y: center;
 }
-.dialog__editInput:focus {
+.dialog__editInput:focus,
+.dialog__createInput:focus {
   outline: 1px solid #007cee;
 }
 
-.dialog__editInput::placeholder {
+.dialog__editInput::placeholder,
+.dialog__createInput::placeholder {
   opacity: 0.2;
 }
 
-#dialog__editNameInput {
+#dialog__editNameInput,
+#dialog__createNameInput {
   background-image: url(../img/person.svg);
 }
-#dialog__editEmailInput {
+#dialog__editEmailInput,
+#dialog__createEmailInput {
   background-image: url(../img/mail.svg);
 }
-#dialog__editPhoneInput {
+#dialog__editPhoneInput,
+#dialog__createPhoneInput {
   background-image: url(../img/call.svg);
 }
 
-.dialog__editRightBtn {
+.dialog__editRightBtn,
+.dialog__createRightBtn {
   display: flex;
   justify-content: flex-end;
   gap: 3em;
@@ -139,7 +152,8 @@ body {
   color: white;
 }
 
-#dialog__editClose {
+#dialog__editClose,
+#dialog__createClose {
   position: absolute;
   top: 1em;
   cursor: pointer;
