--- a/styles/styleSidebar.css
+++ b/styles/styleSidebar.css
@@ -16,6 +16,10 @@ nav {
     display: flex;
 }
 
+.activeSite {
+    background-color: rgba(9,25,49,255);
+}
+
 header {
     width: 100%;
     height: 89px;
